team img updated

--- a/home-ii.html
+++ b/home-ii.html
@@ -73,7 +73,7 @@
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 hidden-xs float-left text-center-sm no-float-sm no-padding">
                                         <ul class="i-list i-list-i-block i-list-i-block-sm i-list-i-block-no-hover pad-0-sm margin-bottom-0 float-left text-center">
                                             <li>
-                                                <div class="dropdown mini-nav"> <a href="tel:9851108896" class="nav-link"><i class="fa-solid fa-phone"></i> 9851108896</a> </div>
+                                                <div class="dropdown mini-nav"> <a href="tel:987654321" class="nav-link"><i class="fa-solid fa-phone"></i> 987654321</a> </div>
                                             </li>
                                             <li>
                                                 <div class="dropdown mini-nav mini-nav-no-bg-hover"> <a href="mailto:youremail@excursion.com" class="nav-link"><i class="fa-solid fa-envelope"></i> youremail@excursion.com</a> </div>
@@ -338,6 +338,62 @@
                     </div>
                 </section>
 
+                <section  class="content-block">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12 less-wide">
+                                <div class="heading-main"> <span class="big">Sub Heading</span>
+                                    <h2><span class="heading-decore">Adventure Packages </span></h2>
+                                </div>
+                                <div class="tab-container tab-center-container text-center">
+                                    <!-- Nav tabs -->
+                                    <ul class="nav nav-tabs tab-text-nav" role="tablist">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" data-toggle="tab" href="#tab5" role="tab" aria-expanded="true">Concept</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" data-toggle="tab" href="#tab6" role="tab" aria-expanded="false">Design</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" data-toggle="tab" href="#tab7" role="tab" aria-expanded="false">Develop</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" data-toggle="tab" href="#tab8" role="tab" aria-expanded="false">Deploy</a>
+                                        </li>
+                                    </ul>
+                                    <!-- Tab panes -->
+                                    <div class="top-m-space tab-content">
+                                        <div class="tab-pane fade active show" id="tab5" role="tabpanel" aria-expanded="true">
+                                            <p>Indulgence announcing uncommonly met she continuing two unpleasing terminated. Now busy say down the shed eyes roof paid her. Of shameless collected suspicion existence in. Share walls stuff think but the arise
+                                                guest. Course suffer to do he sussex it window advice. Yet matter enable misery end extent common men should. Her indulgence but assistance favourable cultivated everything collecting. Now busy say down the
+                                                shed eyes roof paid her. Of shameless collected suspicion existence in.</p>
+                                        </div>
+                                        <div class="tab-pane fade" id="tab6" role="tabpanel" aria-expanded="false">
+                                            <p>Indulgence announcing uncommonly met she continuing two unpleasing terminated. Now busy say down the shed eyes roof paid her. Of shameless collected suspicion existence in. Share walls stuff think but the arise
+                                                guest. Course suffer to do he sussex it window advice. Yet matter enable misery end extent common men should. Her indulgence but assistance favourable cultivated everything collecting. Now busy say down the
+                                                shed eyes roof paid her. Of shameless collected suspicion existence in.</p>
+                                            <p>Indulgence announcing uncommonly met she continuing two unpleasing terminated. Now busy say down the shed eyes roof paid her. Of shameless collected suspicion existence in. Share walls stuff think but the arise
+                                                guest. Course suffer to do he sussex it window advice. Yet matter enable misery end extent common men should. Her indulgence but assistance favourable cultivated everything collecting. Now busy say down the
+                                                shed eyes roof paid her. Of shameless collected suspicion existence in.</p>
+                                        </div>
+                                        <div class="tab-pane fade" id="tab7" role="tabpanel" aria-expanded="false">
+                                            <p>Indulgence announcing uncommonly met she continuing two unpleasing terminated. Now busy say down the shed eyes roof paid her. Of shameless collected suspicion existence in. Share walls stuff think but the arise
+                                                guest. Course suffer to do he sussex it window advice. Yet matter enable misery end extent common men should. Her indulgence but assistance favourable cultivated everything collecting. Now busy say down the
+                                                shed eyes roof paid her. Of shameless collected suspicion existence in. he arise guest. Course suffer to do he sussex it window advice. Yet matter enable misery end extent common men should. Her indulgence but
+                                                assistance favourable cultivated everything collecting. Now busy say down the shed eyes roof paid her. Of shameless collected suspicion existence in.</p>
+                                        </div>
+                                        <div class="tab-pane fade" id="tab8" role="tabpanel" aria-expanded="false">
+                                            <p>Indulgence announcing uncommonly met she continuing two unpleasing terminated. Now busy say down the shed eyes roof paid her. Of shameless collected suspicion existence in. Share walls stuff think but the arise
+                                                guest. Course suffer to do he sussex it window advice. Yet matter enable misery end extent common men should. Her indulgence but assistance favourable cultivated everything collecting. Now busy say down the
+                                                shed eyes roof paid her. Of shameless collected suspicion existence in.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
                 <section class="content-block">
                     <div class="container">
                         <div class="row multiple-row v-align-row">
@@ -440,9 +496,6 @@
                 <section class="content-block bg-gray-light">
                     <div class="container">
                         <div class="demo-wrapper">
-                            <div class="heading-main"> <span class="big">Shortcodes</span>
-                                <h2><span class="heading-decore">3 Column Carousel</span></h2>
-                            </div>
                             <div class="team-container">
                                 <div class="owl-carousel group-slide multi-image">
                                     <div class="slide-item">
