--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 hidden-xs float-left text-center-sm no-float-sm no-padding">
                                         <ul class="i-list i-list-i-block i-list-i-block-sm i-list-i-block-no-hover pad-0-sm margin-bottom-0 float-left text-center">
                                             <li>
-                                                <div class="dropdown mini-nav"> <a href="tel:9851108896" class="nav-link"><i class="fa-solid fa-phone"></i> 9851108896</a> </div>
+                                                <div class="dropdown mini-nav"> <a href="tel:987654321" class="nav-link"><i class="fa-solid fa-phone"></i> 987654321</a> </div>
                                             </li>
                                             <li>
                                                 <div class="dropdown mini-nav mini-nav-no-bg-hover"> <a href="mailto:youremail@excursion.com" class="nav-link"><i class="fa-solid fa-envelope"></i> youremail@excursion.com</a> </div>
@@ -250,19 +250,19 @@
                             <div class="carousel-item slide-1 active">
                                 <div class="caption">
                                     <h1>Create and share<br>your whatever</h1>
-                                    <h2>Make it easy for you to do whatever this thing does.</h2> <a class="btn btn-primary has-radius-small" href="" title="">Create Project</a>
+                                    <h2>Make it easy for you to do whatever this thing does.</h2> <a class="btn btn-primary has-radius-small" href="" title="">Read More</a>
                                 </div>
                             </div>
                             <div class="carousel-item slide-2">
                                 <div class="caption">
                                     <h1>Create and share<br>your whatever</h1>
-                                    <h2> Make it easy for you to do whatever this thing does. </h2> <a class="btn btn-primary has-radius-small" href="" title="">Create Project</a>
+                                    <h2> Make it easy for you to do whatever this thing does. </h2> <a class="btn btn-primary has-radius-small" href="" title="">Read More</a>
                                 </div>
                             </div>
                             <div class="carousel-item slide-3">
                                 <div class="caption">
                                     <h1>Create and share<br>your whatever</h1>
-                                    <h2> Make it easy for you to do whatever this thing does. </h2> <a class="btn btn-primary has-radius-small" href="" title="">Create Project</a>
+                                    <h2> Make it easy for you to do whatever this thing does. </h2> <a class="btn btn-primary has-radius-small" href="" title="">Read More</a>
                                 </div>
                             </div>
                           
@@ -340,9 +340,9 @@
                     <section class="content-block quotation-block black-overlay-6 parallax" data-stellar-background-ratio="0.55">
                         <div class="container">
                             <div class="inner-wrapper">
-                                <h3 class="block-top-heading text-white">BEST EVER DESIGN</h3>
+                                <h3 class="block-top-heading text-white">Best Ever Design</h3>
                                 <h2 class="text-white">Time to enhance your web presence!</h2>
-                                <div class="btn-container"> <a href="#" class="btn btn-primary has-radius-small">GET QUOTATION</a> </div>
+                                <div class="btn-container"> <a href="contact-us.html" class="btn btn-primary has-radius-small">Contact Us</a> </div>
                             </div>
                         </div>
                     </section>
@@ -409,7 +409,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <img src="img/package-4.jpg" alt="" />
+                                    <img src="img/tent-stay.jpg" alt="" />
                                 </div>
                                 <div class="col-md-6">
                                     
@@ -444,31 +444,31 @@
                                 <div class="owl-carousel group-slide">
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
-                                            <div class="img-block rev-gray-scale"> <img src="img/team-02.jpg" alt="images description" /> </div>
+                                            <div class="img-block rev-gray-scale"> <img src="img/Product1.jpg" alt="images description" /> </div>
                                             <figcaption class="text-center"> <strong class="content-title mb-0">Hiking</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
-                                            <div class="img-block rev-gray-scale"> <img src="img/team-01.jpg" alt="images description" /> </div>
+                                            <div class="img-block rev-gray-scale"> <img src="img/Product2.jpg" alt="images description" /> </div>
                                             <figcaption class="text-center"> <strong class="content-title mb-0">Jessica fizovic</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
-                                            <div class="img-block rev-gray-scale"> <img src="img/team-03.jpg" alt="images description" /> </div>
+                                            <div class="img-block rev-gray-scale"> <img src="img/Product3.jpg" alt="images description" /> </div>
                                             <figcaption class="text-center"> <strong class="content-title mb-0">James nass</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
-                                            <div class="img-block rev-gray-scale"> <img src="img/team-02.jpg" alt="images description" /> </div>
+                                            <div class="img-block rev-gray-scale"> <img src="img/Product4.jpg" alt="images description" /> </div>
                                             <figcaption class="text-center"> <strong class="content-title mb-0">Steve manning</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
-                                            <div class="img-block rev-gray-scale"> <img src="img/team-01.jpg" alt="images description" /> </div>
+                                            <div class="img-block rev-gray-scale"> <img src="img/Product5.jpg" alt="images description" /> </div>
                                             <figcaption class="text-center"> <strong class="content-title mb-0">Jessica fizovic</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
@@ -519,7 +519,7 @@
                                 <div class="owl-carousel testimonial-slide" id="Excursion-owl-slide-3">
                                     <div class="slide-item">
                                         <div class="team-wrap">
-                                            <div class="img-block"> <img src="img/people-01.jpg" alt="images description" /> </div>
+                                            <div class="img-block"> <img src="img/team1.jpg" alt="images description" /> </div>
                                             <div class="text-wrap">
                                                 <h2>Natalie Fullick</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
@@ -529,7 +529,7 @@
                                     </div>
                                     <div class="slide-item">
                                         <div class="team-wrap">
-                                            <div class="img-block"> <img src="img/people-02.jpg" alt="images description" /> </div>
+                                            <div class="img-block"> <img src="img/team2.jpg" alt="images description" /> </div>
                                             <div class="text-wrap">
                                                 <h2>Jason Doe</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
@@ -539,7 +539,7 @@
                                     </div>
                                     <div class="slide-item">
                                         <div class="team-wrap">
-                                            <div class="img-block"> <img src="img/people-03.jpg" alt="images description" /> </div>
+                                            <div class="img-block"> <img src="img/team3.jpg" alt="images description" /> </div>
                                             <div class="text-wrap">
                                                 <h2>Jake Grahm</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
@@ -549,7 +549,7 @@
                                     </div>
                                     <div class="slide-item">
                                         <div class="team-wrap">
-                                            <div class="img-block"> <img src="img/people-02.jpg" alt="images description" /> </div>
+                                            <div class="img-block"> <img src="img/team4.jpg" alt="images description" /> </div>
                                             <div class="text-wrap">
                                                 <h2>Natalie Fullick</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
@@ -559,7 +559,7 @@
                                     </div>
                                     <div class="slide-item">
                                         <div class="team-wrap">
-                                            <div class="img-block"> <img src="img/people-01.jpg" alt="images description" /> </div>
+                                            <div class="img-block"> <img src="img/team5.jpg" alt="images description" /> </div>
                                             <div class="text-wrap">
                                                 <h2>Natalie Fullick</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
