--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link media="all" rel="stylesheet" href="css/custom.css" />
 </head>
 
-<body class="white-overlay">
+<body class="white-overlay ">
     <div class="preloader" id="pageLoad">
         <div class="loader"></div>
     </div>
@@ -237,7 +237,7 @@
             <main>
                 
                 <!-- visual/banner of the page -->
-                <div class="banner banner-home">
+                <div class="banner banner-home ">
                     
                     <!-- carousel slider starts -->
                     <div id="carousel" class="carousel slide" data-ride="carousel">
@@ -247,19 +247,19 @@
                             <li data-target="#carousel" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item slide-1 active">
+                            <div class="carousel-item slide-1 text-left active">
                                 <div class="caption">
                                     <h1>Create and share<br>your whatever</h1>
                                     <h2>Make it easy for you to do whatever this thing does.</h2> <a class="btn btn-primary has-radius-small" href="" title="">Read More</a>
                                 </div>
                             </div>
-                            <div class="carousel-item slide-2">
+                            <div class="carousel-item slide-2 text-left">
                                 <div class="caption">
                                     <h1>Create and share<br>your whatever</h1>
                                     <h2> Make it easy for you to do whatever this thing does. </h2> <a class="btn btn-primary has-radius-small" href="" title="">Read More</a>
                                 </div>
                             </div>
-                            <div class="carousel-item slide-3">
+                            <div class="carousel-item slide-3 text-left">
                                 <div class="caption">
                                     <h1>Create and share<br>your whatever</h1>
                                     <h2> Make it easy for you to do whatever this thing does. </h2> <a class="btn btn-primary has-radius-small" href="" title="">Read More</a>
