Home 2 img update

--- a/home-ii.html
+++ b/home-ii.html
@@ -278,7 +278,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="img-wrap">
-                                            <img src="img/img-24.jpg" alt="images">
+                                            <img src="img/home-2-1.png" alt="images">
                                         </div>
                                     </div>
                                 </div>
@@ -288,12 +288,12 @@
                                             <h2>The Code.</h2>
                                             <p><span>Excursion is thoroughly tested for code and speed.</span></p>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-                                            <div class="mt-4aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"><a href="#" class="btn btn-primary has-radius-small">Read More</a></div>
+                                            <div class="mt-4"><a href="#" class="btn btn-primary has-radius-small">Read More</a></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 text-right">
                                         <div class="img-wrap">
-                                            <img src="img/img-25.jpg" alt="images">
+                                            <img src="img/home-2-2.png" alt="images">
                                         </div>
                                     </div>
                                 </div>
@@ -481,7 +481,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="content-block consult-block bg-darker">
+                <section class="content-block consult-block home-ii-bg-1">
                     <div class="container">
                         <div class="inner-wrapper text-center">
                             <h3 class="block-top-heading text-white">BEST EVER DESIGN</h3>
@@ -504,7 +504,7 @@
                                     <div class="slide-item">
                                         <figure class="team-box">
                                             <div class="img-block border-hover-effect">
-                                                <img src="img/img-01.jpg" alt="images description">
+                                                <img src="img/home-2-4.jpg" alt="images description">
                                                 <h4 class="title">Consectetur adipisicing elit.</h4>
                                             </div>
                                         </figure>
@@ -512,7 +512,7 @@
                                     <div class="slide-item">
                                         <figure class="team-box">
                                             <div class="img-block border-hover-effect">
-                                                <img src="img/img-02.jpg" alt="images description">
+                                                <img src="img/home-2-5.jpg" alt="images description">
                                                 <h4 class="title">Consectetur adipisicing elit.</h4>
                                             </div>
                                         </figure>
@@ -520,7 +520,7 @@
                                     <div class="slide-item">
                                         <figure class="team-box">
                                             <div class="img-block border-hover-effect">
-                                                <img src="img/img-03.jpg" alt="images description">
+                                                <img src="img/home-2-6.jpg" alt="images description">
                                                 <h4 class="title">Consectetur adipisicing elit.</h4>
                                             </div>
                                         </figure>
@@ -528,7 +528,7 @@
                                     <div class="slide-item">
                                         <figure class="team-box">
                                             <div class="img-block border-hover-effect">
-                                                <img src="img/img-04.jpg" alt="images description">
+                                                <img src="img/home-2-7.jpg" alt="images description">
                                                 <h4 class="title">Consectetur adipisicing elit.</h4>
                                             </div>
                                         </figure>
@@ -536,7 +536,7 @@
                                     <div class="slide-item">
                                         <figure class="team-box">
                                             <div class="img-block border-hover-effect">
-                                                <img src="img/img-05.jpg" alt="images description">
+                                                <img src="img/home-2-8.jpg" alt="images description">
                                                 <h4 class="title">Consectetur adipisicing elit.</h4>
                                             </div>
                                         </figure>
