--- a/signin.html
+++ b/signin.html
@@ -234,12 +234,12 @@
             </header>
             
             <!--/header of the page -->
-            <main>rapper -->
+            <main class="n">
                 <div class="content-wrapper">
                     <div class="row  no-gutters">
                         <div class="col-lg-6 hidden-md-down">
                             <div class="bg-stretch img-wrap">
-                                <img src="img/visual-12.jpg" alt="images">
+                                <img src="img/account.jpg" alt="images">
                             </div>
                         </div>
                         <div class="col-lg-6 signup-block">
@@ -247,35 +247,35 @@
                                 <div class="inner-wrap">
                                     <div class="circular-icon bottom-space"><i class="fa-solid fa-arrow-right-to-bracket"></i></div>
                                     <form action="#" method="post" id="contact_form" class="Excursion_contact-form signup-form">
-                                        <h2 class="bottom-space">User Login</h2>
+                                        <h2 class="bottom-space">Sign in</h2>
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <input type="text" placeholder="USERNAME OR EMAIL" id="con_uname" name="con_fname" class="form-control">
+                                                    <input type="text" placeholder="User Name" id="con_uname" name="con_fname" class="form-control">
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-group">
-                                                    <input type="password" placeholder="PASSWORD" id="con_password" name="con_lname" class="form-control">
+                                                    <input type="password" placeholder="Password" id="con_password" name="con_lname" class="form-control">
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="Excursion_select-box">
                                                     <div class="Excursion_select-box-default square-box">
                                                         <input type="checkbox" name="checkbox" id="checkbox11">
-                                                        <label for="checkbox11" class="m-0">REMEMBER ME</label>
+                                                        <label for="checkbox11" class="m-0">Remember Me</label>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
-                                                <p><a href="#">Forgot Password ?</a></p>
+                                                <p><a href="forgot-password.html">Forgot Password ?</a></p>
                                             </div>
                                         </div>
                                         <div class="btn-container mb-3  mb-xl-3 mt-xl-5 mt-lg-2">
                                             <button id="btn_sent" class="btn btn-primary has-radius-small">Login</button>
                                         </div>
                                         <p>Don't have an account yet?
-                                            <a href="#"> Register New Account. </a></p>
+                                            <a href="signup.html"> Register </a></p>
                                     </form>
                                 </div>
                             </div>
