--- a/corporate.html
+++ b/corporate.html
@@ -499,7 +499,7 @@
                                 </form>
                             </div>
                             <div class="my-4">
-                                <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                                <p>Embark on Adventures Unbound, Explore, Experience, and Create Memories Profound!</p>
                             </div>
                         </div>
                         <div class="col-lg-2">
