--- a/features-dark-bg-search.html
+++ b/features-dark-bg-search.html
@@ -221,12 +221,12 @@
                                                                 <li><a href="#"><i class="icon-error"></i> 404 Page V2 </a></li>
                                                                 <li><a href="#"><i class="icon-sitemap"></i> Site Map </a></li>
                                                                 <h5> User Profile </h5>
-                                                                <li><a href="registration.html"><i class="icon-user-plus"></i> Registration </a></li>
-                                                                <li><a href="confirm-email.html"><i class="icon-envelope-1"></i> Confirm Email </a></li>
-                                                                <li><a href="signin.html"><i class="icon-login"></i> Sign In </a></li>
-                                                                <li><a href="forgot-password.html"><i class="icon-ios-unlocked"></i> Forgot Password </a></li>
-                                                                <li><a href="#"><i class="icon-dashboard-1"></i> Dashboard </a></li>
-                                                                <li><a href="#"><i class="icon-edit-modify-streamline"></i> Edit Profile </a></li>
+                                                                <li><a href="registration.html"><i class="fa-solid fa-user-plus"></i></i> Registration </a></li>
+                                                                <li><a href="confirm-email.html"><i class="fa-solid fa-envelope"></i></i> Confirm Email </a></li>
+                                                                <li><a href="signin.html"><i class="fa-solid fa-right-to-bracket"></i> Sign In </a></li>
+                                                                <li><a href="forgot-password.html"><i class="fa-solid fa-unlock-keyhole"></i> Forgot Password </a></li>
+                                                                <li><a href="#"><i class="fa-solid fa-gauge"></i>> Dashboard </a></li>
+                                                                <li><a href="#"><i class="fa-solid fa-user-pen"></i> Edit Profile </a></li>
                                                             </ul>
                                                         </div>
                                                     </div>
