--- a/features-simple-mega.html
+++ b/features-simple-mega.html
@@ -97,12 +97,12 @@
                                                     <div class="widget-default clearfix">
                                                         <h5> Lorem ipsum </h5>
                                                         <ul class="s-list s-list-pl s-list-mb-10 no-padding">
-                                                            <li><a href="registration.html"><i class="icon-user-plus"></i> Lorem ipsum </a></li>
-                                                            <li><a href="confirm-email.html"><i class="icon-envelope-1"></i> Lorem ipsum </a></li>
-                                                            <li><a href="signin.html"><i class="icon-login"></i> Lorem ipsum </a></li>
-                                                            <li><a href="forgot-password.html"><i class="icon-ios-unlocked"></i> Lorem ipsum </a></li>
-                                                            <li><a href="#"><i class="icon-dashboard-1"></i> Lorem ipsum </a></li>
-                                                            <li><a href="#"><i class="icon-edit-modify-streamline"></i> Lorem ipsum </a></li>
+                                                            <li><a href="registration.html"><i class="fa-solid fa-user-plus"></i></i> Lorem ipsum </a></li>
+                                                            <li><a href="confirm-email.html"><i class="fa-solid fa-envelope"></i></i> Lorem ipsum </a></li>
+                                                            <li><a href="signin.html"><i class="fa-solid fa-right-to-bracket"></i> Lorem ipsum </a></li>
+                                                            <li><a href="forgot-password.html"><i class="fa-solid fa-unlock-keyhole"></i> Lorem ipsum </a></li>
+                                                            <li><a href="#"><i class="fa-solid fa-gauge"></i>> Lorem ipsum </a></li>
+                                                            <li><a href="#"><i class="fa-solid fa-user-pen"></i> Lorem ipsum </a></li>
                                                         </ul>
                                                     </div>
                                                 </div>
